--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -246,6 +246,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184855">Japanese Whalers Killed 122 Pregnant Whales and 114 Babies Last Summer</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.livescience.com/62682-japanese-whalers-murdered-122-pregnant-whales.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kimsk112">kimsk112</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 03:33:27 &nbsp;•&nbsp;
+                                    3 comments &nbsp;•&nbsp;
+                                    13.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17184605">Neveragain.tech</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -346,26 +366,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184855">Japanese Whalers Killed 122 Pregnant Whales and 114 Babies Last Summer</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.livescience.com/62682-japanese-whalers-murdered-122-pregnant-whales.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kimsk112">kimsk112</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 03:33:27 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    12.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17180102">The 2018 Perl Developer Survey Results</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -406,14 +406,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184101">Investors Bet $4B on a Cryptocurrency Startup</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184101">Block.one’s sale of its digital tokens dwarfs other coin sales</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
                                     <a class="node" href="https://www.wsj.com/articles/investors-bet-4-billion-on-a-cryptocurrency-startup-1527591600">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Crafty_Gurl">Crafty_Gurl</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:00:30 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
+                                    5 comments &nbsp;•&nbsp;
                                     11.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 05:40:03.009915</strong>
+            <strong>Last update at 2018-05-30 05:50:04.355172</strong>
         </div>
     </div>
 </div>
