--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172045">Teach Yourself Scheme in Fixnum Days (2015)</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    178.0 points
+                                    <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 12:25:27 &nbsp;•&nbsp;
+                                    24 comments &nbsp;•&nbsp;
+                                    179.0 points
                                 </span>
                             </td>
                         </tr>
@@ -534,7 +534,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=wearhere">wearhere</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:11:56 &nbsp;•&nbsp;
                                     39 comments &nbsp;•&nbsp;
-                                    141.0 points
+                                    142.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 06:10:03.542604</strong>
+            <strong>Last update at 2018-05-30 06:20:03.734051</strong>
         </div>
     </div>
 </div>
