--- a/jobs/index.html
+++ b/jobs/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165889">Improved Seam Carving Using Forward Energy</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175186">Sucrase, 20x faster smaller-scoped alternative to Babel</a>
                                 </span>
                             </td>
                         </tr>
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 07:10:03.609254</strong>
+            <strong>Last update at 2018-05-30 07:20:04.749033</strong>
         </div>
     </div>
 </div>
