--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17165889">Improved Seam Carving Using Forward Energy</a>
+                                    <a href="https://news.ycombinator.com/item?id=17175186">Sucrase, 20x faster smaller-scoped alternative to Babel</a>
                                 </span>
                             </td>
                         </tr>
@@ -213,8 +213,8 @@
                                     <a class="node" href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:28:00 &nbsp;•&nbsp;
-                                    391 comments &nbsp;•&nbsp;
-                                    248.0 points
+                                    394 comments &nbsp;•&nbsp;
+                                    251.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +254,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=noonespecial">noonespecial</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:23:15 &nbsp;•&nbsp;
                                     226 comments &nbsp;•&nbsp;
-                                    240.0 points
+                                    241.0 points
                                 </span>
                             </td>
                         </tr>
@@ -314,7 +314,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=deng">deng</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 14:19:04 &nbsp;•&nbsp;
                                     91 comments &nbsp;•&nbsp;
-                                    225.0 points
+                                    226.0 points
                                 </span>
                             </td>
                         </tr>
@@ -426,14 +426,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
+                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
-                                    32 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
+                                    14 comments &nbsp;•&nbsp;
                                     187.0 points
                                 </span>
                             </td>
@@ -446,15 +446,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17181879">Introducing Kepler.gl, an Open-Source Geospatial Toolbox</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://ubere.ng/2H1HjFH">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 18:42:23 &nbsp;•&nbsp;
-                                    14 comments &nbsp;•&nbsp;
-                                    185.0 points
+                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
+                                    32 comments &nbsp;•&nbsp;
+                                    187.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,7 +533,7 @@
                                     <a class="node" href="https://ds26gte.github.io/tyscheme/">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=tempodox">tempodox</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 12:25:27 &nbsp;•&nbsp;
-                                    24 comments &nbsp;•&nbsp;
+                                    25 comments &nbsp;•&nbsp;
                                     179.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 07:10:03.609254</strong>
+            <strong>Last update at 2018-05-30 07:20:04.749033</strong>
         </div>
     </div>
 </div>
