--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175186">Sucrase, 20x faster smaller-scoped alternative to Babel</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:42:23 &nbsp;•&nbsp;
                                     14 comments &nbsp;•&nbsp;
-                                    187.0 points
+                                    189.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 07:40:03.736948</strong>
+            <strong>Last update at 2018-05-30 07:50:04.474710</strong>
         </div>
     </div>
 </div>
