--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183241">Deno, a secure TypeScript runtime using V8 and Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,7 @@
                                     <a class="node" href="https://github.com/tootsuite/mastodon/releases/tag/v2.4.0">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=valeg">valeg</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:53:37 &nbsp;•&nbsp;
-                                    116 comments &nbsp;•&nbsp;
+                                    117 comments &nbsp;•&nbsp;
                                     283.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 08:20:04.490759</strong>
+            <strong>Last update at 2018-05-30 08:30:04.841024</strong>
         </div>
     </div>
 </div>
