--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183241">Deno, a secure TypeScript runtime using V8 and Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -175,6 +175,26 @@
                                     2018-05-29 13:49:09 &nbsp;•&nbsp;
                                     35 comments &nbsp;•&nbsp;
                                     26.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    25.0 points
                                 </span>
                             </td>
                         </tr>
@@ -254,7 +274,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 03:06:38 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
-                                    23.0 points
+                                    24.0 points
                                 </span>
                             </td>
                         </tr>
@@ -274,7 +294,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=Crafty_Gurl">Crafty_Gurl</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:00:30 &nbsp;•&nbsp;
                                     13 comments &nbsp;•&nbsp;
-                                    23.0 points
+                                    24.0 points
                                 </span>
                             </td>
                         </tr>
@@ -286,15 +306,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184855">Japanese Whalers Killed 122 Pregnant Whales and 114 Babies Last Summer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    22.0 points
+                                    <a class="node" href="https://www.livescience.com/62682-japanese-whalers-murdered-122-pregnant-whales.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kimsk112">kimsk112</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 03:33:27 &nbsp;•&nbsp;
+                                    12 comments &nbsp;•&nbsp;
+                                    21.0 points
                                 </span>
                             </td>
                         </tr>
@@ -355,26 +375,6 @@
                                     2018-05-29 22:29:38 &nbsp;•&nbsp;
                                     0 comments &nbsp;•&nbsp;
                                     20.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184855">Japanese Whalers Killed 122 Pregnant Whales and 114 Babies Last Summer</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.livescience.com/62682-japanese-whalers-murdered-122-pregnant-whales.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kimsk112">kimsk112</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 03:33:27 &nbsp;•&nbsp;
-                                    10 comments &nbsp;•&nbsp;
-                                    19.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 08:20:04.490759</strong>
+            <strong>Last update at 2018-05-30 08:30:04.841024</strong>
         </div>
     </div>
 </div>
