--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183241">Deno, a secure TypeScript runtime using V8 and Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -226,6 +226,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17180102">The 2018 Perl Developer Survey Results</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.perl.com/article/the-2018-perl-developer-survey-results/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=kamaal">kamaal</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 15:37:26 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
+                                    13.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17179290">Snips AIR: an open source, private, blockchain-based alternative to Amazon Echo</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -294,26 +314,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=jbreckmckye">jbreckmckye</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 20:39:37 &nbsp;•&nbsp;
                                     1 comments &nbsp;•&nbsp;
-                                    12.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17180102">The 2018 Perl Developer Survey Results</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://www.perl.com/article/the-2018-perl-developer-survey-results/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=kamaal">kamaal</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 15:37:26 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
                                     12.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 08:20:04.490759</strong>
+            <strong>Last update at 2018-05-30 08:30:04.841024</strong>
         </div>
     </div>
 </div>
