--- a/top_stories/week/index.html
+++ b/top_stories/week/index.html
@@ -110,7 +110,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_hot_topic_title">
-                                    <a href="https://news.ycombinator.com/item?id=17172557">Smooth UI, a React UI Library for Humans</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183241">Deno, a secure TypeScript runtime using V8 and Go</a>
                                 </span>
                             </td>
                         </tr>
@@ -253,8 +253,8 @@
                                     <a class="node" href="https://www.theguardian.com/science/blog/2018/may/29/why-thousands-of-ai-researchers-are-boycotting-the-new-nature-journal">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=HoppedUpMenace">HoppedUpMenace</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 17:36:26 &nbsp;•&nbsp;
-                                    181 comments &nbsp;•&nbsp;
-                                    679.0 points
+                                    182 comments &nbsp;•&nbsp;
+                                    683.0 points
                                 </span>
                             </td>
                         </tr>
@@ -313,8 +313,8 @@
                                     <a class="node" href="https://zachholman.com/talk/utc-is-enough-for-everyone-right">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=bpierre">bpierre</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 17:10:49 &nbsp;•&nbsp;
-                                    234 comments &nbsp;•&nbsp;
-                                    560.0 points
+                                    235 comments &nbsp;•&nbsp;
+                                    563.0 points
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=ytNumbers">ytNumbers</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:38:38 &nbsp;•&nbsp;
                                     228 comments &nbsp;•&nbsp;
-                                    442.0 points
+                                    443.0 points
                                 </span>
                             </td>
                         </tr>
@@ -599,7 +599,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 08:20:04.490759</strong>
+            <strong>Last update at 2018-05-30 08:30:04.841024</strong>
         </div>
     </div>
 </div>
