--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -166,26 +166,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166541">Every Ruler in Europe Every Year Since 400 BC</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://thesoundingline.com/map-of-the-day-every-ruler-in-europe-since-400-bc/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Four_Star">Four_Star</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 11:58:58 &nbsp;•&nbsp;
-                                    131 comments &nbsp;•&nbsp;
-                                    339.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17152496">Google and Facebook accused of breaking GDPR laws</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -514,7 +494,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=janvdberg">janvdberg</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 10:06:53 &nbsp;•&nbsp;
                                     481 comments &nbsp;•&nbsp;
-                                    263.0 points
+                                    264.0 points
                                 </span>
                             </td>
                         </tr>
@@ -555,6 +535,26 @@
                                     2018-05-27 06:44:02 &nbsp;•&nbsp;
                                     153 comments &nbsp;•&nbsp;
                                     259.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17183057">Tesla in autopilot mode crashes into parked Laguna Beach police cruiser</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://www.latimes.com/local/lanow/la-me-ln-tesla-collision-20180529-story.html">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=extesy">extesy</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 21:28:00 &nbsp;•&nbsp;
+                                    407 comments &nbsp;•&nbsp;
+                                    257.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 09:00:03.818621</strong>
+            <strong>Last update at 2018-05-30 09:10:03.854950</strong>
         </div>
     </div>
 </div>
