--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185569">Lobotomizing Gnome</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 06:38:38 &nbsp;•&nbsp;
-                                    91 comments &nbsp;•&nbsp;
-                                    102.0 points
+                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
+                                    21 comments &nbsp;•&nbsp;
+                                    104.0 points
                                 </span>
                             </td>
                         </tr>
@@ -486,6 +486,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
+                                    13 comments &nbsp;•&nbsp;
+                                    79.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17179378">Self-driving technology is going to change more than cars</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -515,26 +535,6 @@
                                     2018-05-27 12:29:35 &nbsp;•&nbsp;
                                     51 comments &nbsp;•&nbsp;
                                     77.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    13 comments &nbsp;•&nbsp;
-                                    76.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 10:10:03.941373</strong>
+            <strong>Last update at 2018-05-30 10:20:04.648411</strong>
         </div>
     </div>
 </div>
