--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -194,7 +194,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=matt_d">matt_d</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 11:51:42 &nbsp;•&nbsp;
                                     8 comments &nbsp;•&nbsp;
-                                    99.0 points
+                                    100.0 points
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 00:47:59 &nbsp;•&nbsp;
                                     13 comments &nbsp;•&nbsp;
-                                    97.0 points
+                                    98.0 points
                                 </span>
                             </td>
                         </tr>
@@ -306,6 +306,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
+                                    16 comments &nbsp;•&nbsp;
+                                    93.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17181175">The Open Home Lab Stack (2017)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -326,15 +346,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184410">Cervus: A WebAssembly subsystem for Linux</a>
+                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    16 comments &nbsp;•&nbsp;
-                                    89.0 points
+                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    92.0 points
                                 </span>
                             </td>
                         </tr>
@@ -533,28 +553,8 @@
                                     <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:31:12 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
-                                    77.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17166642">The ‘suprasecular’ stagnation</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://voxeu.org/article/suprasecular-stagnation">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=lkrubner">lkrubner</a></strong> &nbsp;•&nbsp;
-                                    2018-05-27 12:29:35 &nbsp;•&nbsp;
-                                    51 comments &nbsp;•&nbsp;
-                                    77.0 points
+                                    27 comments &nbsp;•&nbsp;
+                                    78.0 points
                                 </span>
                             </td>
                         </tr>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 11:00:03.934348</strong>
+            <strong>Last update at 2018-05-30 11:10:04.827038</strong>
         </div>
     </div>
 </div>
