--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -173,7 +173,7 @@
                                     <a class="node" href="https://research.swtch.com/vgo-accepted">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 21:37:21 &nbsp;•&nbsp;
-                                    109 comments &nbsp;•&nbsp;
+                                    111 comments &nbsp;•&nbsp;
                                     146.0 points
                                 </span>
                             </td>
@@ -213,7 +213,7 @@
                                     <a class="node" href="https://priceonomics.com/post/45768546804/diamonds-are-bullshit">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=joering2">joering2</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 02:22:17 &nbsp;•&nbsp;
-                                    40 comments &nbsp;•&nbsp;
+                                    41 comments &nbsp;•&nbsp;
                                     139.0 points
                                 </span>
                             </td>
@@ -233,8 +233,8 @@
                                     <a class="node" href="https://eklitzke.org/lobotomizing-gnome">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=deafcalculus">deafcalculus</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 06:38:38 &nbsp;•&nbsp;
-                                    107 comments &nbsp;•&nbsp;
-                                    124.0 points
+                                    111 comments &nbsp;•&nbsp;
+                                    125.0 points
                                 </span>
                             </td>
                         </tr>
@@ -293,8 +293,8 @@
                                     <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    20 comments &nbsp;•&nbsp;
-                                    101.0 points
+                                    21 comments &nbsp;•&nbsp;
+                                    103.0 points
                                 </span>
                             </td>
                         </tr>
@@ -353,8 +353,8 @@
                                     <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
-                                    84.0 points
+                                    27 comments &nbsp;•&nbsp;
+                                    85.0 points
                                 </span>
                             </td>
                         </tr>
@@ -433,7 +433,7 @@
                                     <a class="node" href="http://www.imperialclub.com/Articles/58AutoPilot/index.htm">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=userbinator">userbinator</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 02:31:59 &nbsp;•&nbsp;
-                                    32 comments &nbsp;•&nbsp;
+                                    33 comments &nbsp;•&nbsp;
                                     69.0 points
                                 </span>
                             </td>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17180421">The Supreme Court Is Stubbornly Analog By Design</a>
+                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://fivethirtyeight.com/features/the-supreme-court-is-stubbornly-analog-by-design/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=sprucely">sprucely</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 16:08:38 &nbsp;•&nbsp;
-                                    28 comments &nbsp;•&nbsp;
-                                    55.0 points
+                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    57.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17185407">Ocean waves play greater role in trapping CO2 than previously understood</a>
+                                    <a href="https://news.ycombinator.com/item?id=17180421">The Supreme Court Is Stubbornly Analog By Design</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 05:55:17 &nbsp;•&nbsp;
-                                    1 comments &nbsp;•&nbsp;
-                                    52.0 points
+                                    <a class="node" href="https://fivethirtyeight.com/features/the-supreme-court-is-stubbornly-analog-by-design/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=sprucely">sprucely</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 16:08:38 &nbsp;•&nbsp;
+                                    28 comments &nbsp;•&nbsp;
+                                    55.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 12:00:03.588234</strong>
+            <strong>Last update at 2018-05-30 12:10:03.058811</strong>
         </div>
     </div>
 </div>
