--- a/top_stories/daily/page3.html
+++ b/top_stories/daily/page3.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17180773">To Predict Turbulence, Count the Puffs (2014)</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="http://nautil.us/issue/25/water/to-predict-turbulence-just-count-the-puffs-rp">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=dnetesn">dnetesn</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 16:42:41 &nbsp;•&nbsp;
+                                    2 comments &nbsp;•&nbsp;
+                                    26.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17179099">How gender bias affects healthcare</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -206,14 +226,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183644">20-week Study: Facial exercises help middle-aged appear more youthful</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183361">Introducing Machine Learning Practica</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.northwestern.edu/stories/2018/january/facial-exercises-help-middle-aged-women-appear-more-youthful/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=DrScump">DrScump</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 23:28:21 &nbsp;•&nbsp;
-                                    4 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://blog.google/topics/machine-learning/introducing-machine-learning-practica/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 22:29:38 &nbsp;•&nbsp;
+                                    0 comments &nbsp;•&nbsp;
                                     25.0 points
                                 </span>
                             </td>
@@ -255,26 +275,6 @@
                                     2018-05-29 15:37:30 &nbsp;•&nbsp;
                                     22 comments &nbsp;•&nbsp;
                                     25.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17183361">Introducing Machine Learning Practica</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://blog.google/topics/machine-learning/introducing-machine-learning-practica/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=stablemap">stablemap</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 22:29:38 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    24.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 12:00:03.588234</strong>
+            <strong>Last update at 2018-05-30 12:10:03.058811</strong>
         </div>
     </div>
 </div>
