--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -166,6 +166,26 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17172287">Perceived Physical Activity and Mortality: Study</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://www.health.harvard.edu/blog/mind-over-matter-how-fit-you-think-you-are-versus-actual-fitness-2017081412282">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=giffarage">giffarage</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:33:30 &nbsp;•&nbsp;
+                                    155 comments &nbsp;•&nbsp;
+                                    254.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17168713">Why “children,” not “childs”? (2016)</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -286,26 +306,6 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186457">Diamonds Suck</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="http://diamondssuck.com/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nsomaru">nsomaru</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:14:20 &nbsp;•&nbsp;
-                                    95 comments &nbsp;•&nbsp;
-                                    225.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
                                     <a href="https://news.ycombinator.com/item?id=17166631">Analog Devices AD9361 – when microchips are more profitable than drugs</a>
                                 </span>
                                 <div class="sep5"></div>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=mvorwerck">mvorwerck</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 18:42:23 &nbsp;•&nbsp;
                                     15 comments &nbsp;•&nbsp;
-                                    207.0 points
+                                    208.0 points
                                 </span>
                             </td>
                         </tr>
@@ -406,14 +406,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
-                                    32 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
+                                    85 comments &nbsp;•&nbsp;
                                     187.0 points
                                 </span>
                             </td>
@@ -426,15 +426,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177518">Pwned Passwords in Practice: Real World Examples of Blocking the Worst Passwords</a>
+                                    <a href="https://news.ycombinator.com/item?id=17171033">NetBSD Network Security Audit</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.troyhunt.com/pwned-passwords-in-practice-real-world-examples-of-blocking-the-worst-passwords/">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=robin_reala">robin_reala</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:00:46 &nbsp;•&nbsp;
-                                    85 comments &nbsp;•&nbsp;
-                                    186.0 points
+                                    <a class="node" href="http://blog.netbsd.org/tnf/entry/network_security_audit">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 07:21:31 &nbsp;•&nbsp;
+                                    32 comments &nbsp;•&nbsp;
+                                    187.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175350">PS4-5.05-Kernel-Exploit: A fully implemented kernel exploit for the PS4</a>
+                                    <a href="https://news.ycombinator.com/item?id=17183784">Learn cryptographic engineering by example</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://github.com/Cryptogenic/PS4-5.05-Kernel-Exploit">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=axiomdata316">axiomdata316</a></strong> &nbsp;•&nbsp;
-                                    2018-05-28 23:06:24 &nbsp;•&nbsp;
-                                    48 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://github.com/sodium-friends/learntocrypto">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=praxis23">praxis23</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 23:59:50 &nbsp;•&nbsp;
+                                    7 comments &nbsp;•&nbsp;
                                     174.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 12:00:03.588234</strong>
+            <strong>Last update at 2018-05-30 12:10:03.058811</strong>
         </div>
     </div>
 </div>
