--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17175677">A Graduate Course in Applied Cryptography (2017)</a>
+                                    <a href="https://news.ycombinator.com/item?id=17172305">Vuetube – Video resources that will help you to improve your Vue skills</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="http://toc.cryptobook.us">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=apo">apo</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 00:56:31 &nbsp;•&nbsp;
-                                    0 comments &nbsp;•&nbsp;
-                                    103.0 points
+                                    <a class="node" href="http://vuetube.surge.sh">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=flowck">flowck</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 13:37:26 &nbsp;•&nbsp;
+                                    21 comments &nbsp;•&nbsp;
+                                    104.0 points
                                 </span>
                             </td>
                         </tr>
@@ -193,8 +193,8 @@
                                     <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    20 comments &nbsp;•&nbsp;
-                                    101.0 points
+                                    21 comments &nbsp;•&nbsp;
+                                    103.0 points
                                 </span>
                             </td>
                         </tr>
@@ -373,7 +373,27 @@
                                     <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
+                                    27 comments &nbsp;•&nbsp;
+                                    85.0 points
+                                </span>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                
+                <div class="cell item" style="">
+                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
+                        <tr>
+                            <td width="auto" valign="middle">
+                                <span class="item_title">
+                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
+                                </span>
+                                <div class="sep5"></div>
+                                <span class="small fade">
+                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
+                                    30 comments &nbsp;•&nbsp;
                                     84.0 points
                                 </span>
                             </td>
@@ -434,26 +454,6 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=mark-ruwt">mark-ruwt</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 17:29:37 &nbsp;•&nbsp;
                                     48 comments &nbsp;•&nbsp;
-                                    82.0 points
-                                </span>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
-                
-                <div class="cell item" style="">
-                    <table cellpadding="0" cellspacing="0" border="0" width="100%">
-                        <tr>
-                            <td width="auto" valign="middle">
-                                <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177668">Three-sided Football</a>
-                                </span>
-                                <div class="sep5"></div>
-                                <span class="small fade">
-                                    <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 09:31:12 &nbsp;•&nbsp;
-                                    30 comments &nbsp;•&nbsp;
                                     82.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 12:00:03.588234</strong>
+            <strong>Last update at 2018-05-30 12:10:03.058811</strong>
         </div>
     </div>
 </div>
