--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -166,15 +166,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
+                                    <a href="https://news.ycombinator.com/item?id=17174968">Pushing the Limits of IPFS and OrbitDB</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
+                                    <a class="node" href="http://mrh.io/2018-01-24-pushing-limits-ipfs-orbitdb/">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=markhenderson">markhenderson</a></strong> &nbsp;•&nbsp;
+                                    2018-05-28 21:31:24 &nbsp;•&nbsp;
                                     33 comments &nbsp;•&nbsp;
-                                    97.0 points
+                                    100.0 points
                                 </span>
                             </td>
                         </tr>
@@ -186,15 +186,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186591">How Scrum disempowers developers</a>
+                                    <a href="https://news.ycombinator.com/item?id=17184407">Zig: programming language designed for robustness optimality and clarity [video]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 10:53:13 &nbsp;•&nbsp;
-                                    72 comments &nbsp;•&nbsp;
-                                    96.0 points
+                                    <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 01:54:10 &nbsp;•&nbsp;
+                                    34 comments &nbsp;•&nbsp;
+                                    99.0 points
                                 </span>
                             </td>
                         </tr>
@@ -253,7 +253,7 @@
                                     <a class="node" href="https://hackernoon.com/the-open-home-lab-stack-5e5858722fee">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=indigodaddy">indigodaddy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 17:25:30 &nbsp;•&nbsp;
-                                    38 comments &nbsp;•&nbsp;
+                                    39 comments &nbsp;•&nbsp;
                                     93.0 points
                                 </span>
                             </td>
@@ -273,8 +273,8 @@
                                     <a class="node" href="https://en.wikipedia.org/wiki/Three_sided_football">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=camillomiller">camillomiller</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 09:31:12 &nbsp;•&nbsp;
-                                    36 comments &nbsp;•&nbsp;
-                                    91.0 points
+                                    37 comments &nbsp;•&nbsp;
+                                    92.0 points
                                 </span>
                             </td>
                         </tr>
@@ -334,7 +334,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=cleong">cleong</a></strong> &nbsp;•&nbsp;
                                     2018-05-28 22:03:09 &nbsp;•&nbsp;
                                     31 comments &nbsp;•&nbsp;
-                                    88.0 points
+                                    89.0 points
                                 </span>
                             </td>
                         </tr>
@@ -473,7 +473,7 @@
                                     <a class="node" href="http://www.imperialclub.com/Articles/58AutoPilot/index.htm">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=userbinator">userbinator</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 02:31:59 &nbsp;•&nbsp;
-                                    37 comments &nbsp;•&nbsp;
+                                    39 comments &nbsp;•&nbsp;
                                     78.0 points
                                 </span>
                             </td>
@@ -601,7 +601,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 13:00:04.012367</strong>
+            <strong>Last update at 2018-05-30 13:10:04.024818</strong>
         </div>
     </div>
 </div>
