--- a/top_stories/daily/page1.html
+++ b/top_stories/daily/page1.html
@@ -193,8 +193,8 @@
                                     <a class="node" href="https://github.com/cervus-v/cervus">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=dmmalam">dmmalam</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:27 &nbsp;•&nbsp;
-                                    33 comments &nbsp;•&nbsp;
-                                    131.0 points
+                                    34 comments &nbsp;•&nbsp;
+                                    133.0 points
                                 </span>
                             </td>
                         </tr>
@@ -213,8 +213,8 @@
                                     <a class="node" href="https://www.lambdacambridge.com/blog/how-scrum-disempowers-developers-and-destroys-agile">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=Robin_Message">Robin_Message</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 10:53:13 &nbsp;•&nbsp;
-                                    100 comments &nbsp;•&nbsp;
-                                    123.0 points
+                                    108 comments &nbsp;•&nbsp;
+                                    125.0 points
                                 </span>
                             </td>
                         </tr>
@@ -234,7 +234,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=brahmwg">brahmwg</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 00:47:59 &nbsp;•&nbsp;
                                     17 comments &nbsp;•&nbsp;
-                                    117.0 points
+                                    119.0 points
                                 </span>
                             </td>
                         </tr>
@@ -273,8 +273,8 @@
                                     <a class="node" href="https://www.youtube.com/watch?v=Z4oYSByyRak">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=espeed">espeed</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 01:54:10 &nbsp;•&nbsp;
-                                    35 comments &nbsp;•&nbsp;
-                                    103.0 points
+                                    37 comments &nbsp;•&nbsp;
+                                    104.0 points
                                 </span>
                             </td>
                         </tr>
@@ -333,7 +333,7 @@
                                     <a class="node" href="http://www.imperialclub.com/Articles/58AutoPilot/index.htm">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=userbinator">userbinator</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 02:31:59 &nbsp;•&nbsp;
-                                    43 comments &nbsp;•&nbsp;
+                                    47 comments &nbsp;•&nbsp;
                                     82.0 points
                                 </span>
                             </td>
@@ -374,7 +374,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=bookofjoe">bookofjoe</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:22:00 &nbsp;•&nbsp;
                                     106 comments &nbsp;•&nbsp;
-                                    79.0 points
+                                    80.0 points
                                 </span>
                             </td>
                         </tr>
@@ -393,8 +393,8 @@
                                     <a class="node" href="https://phys.org/news/2018-05-reveals-ocean-greater-role-carbon.html">Article</a> &nbsp;•&nbsp;
                                     <strong><a href="https://news.ycombinator.com/user?id=startupflix">startupflix</a></strong> &nbsp;•&nbsp;
                                     2018-05-30 05:55:17 &nbsp;•&nbsp;
-                                    3 comments &nbsp;•&nbsp;
-                                    76.0 points
+                                    5 comments &nbsp;•&nbsp;
+                                    78.0 points
                                 </span>
                             </td>
                         </tr>
@@ -434,7 +434,7 @@
                                     <strong><a href="https://news.ycombinator.com/user?id=rbanffy">rbanffy</a></strong> &nbsp;•&nbsp;
                                     2018-05-29 14:48:08 &nbsp;•&nbsp;
                                     12 comments &nbsp;•&nbsp;
-                                    68.0 points
+                                    69.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,14 +546,14 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17184706">Honda Aircraft Launches HondaJet Elite</a>
+                                    <a href="https://news.ycombinator.com/item?id=17187056">Playing hard exploration games by watching YouTube</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.flyingmag.com/honda-aircraft-launches-hondajet-elite">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=nwatson">nwatson</a></strong> &nbsp;•&nbsp;
-                                    2018-05-30 03:00:47 &nbsp;•&nbsp;
-                                    59 comments &nbsp;•&nbsp;
+                                    <a class="node" href="https://arxiv.org/abs/1805.11592">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=indescions_2018">indescions_2018</a></strong> &nbsp;•&nbsp;
+                                    2018-05-30 12:17:25 &nbsp;•&nbsp;
+                                    4 comments &nbsp;•&nbsp;
                                     52.0 points
                                 </span>
                             </td>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 13:30:03.926635</strong>
+            <strong>Last update at 2018-05-30 13:40:03.618050</strong>
         </div>
     </div>
 </div>
