--- a/jobs/index.html
+++ b/jobs/index.html
@@ -144,7 +144,7 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17186947">Atrium (YC W18 – Democratizing Legal Services) Is Hiring a Lead Data Engineer</a>
+                                    <a href="https://news.ycombinator.com/item?id=17186947">Atrium (YC W18) Is Hiring a Lead Data Engineer</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
@@ -577,7 +577,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 14:40:04.173279</strong>
+            <strong>Last update at 2018-05-30 14:50:03.327014</strong>
         </div>
     </div>
 </div>
