--- a/top_stories/week/page3.html
+++ b/top_stories/week/page3.html
@@ -486,15 +486,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17134531">US Employee in China Suffers Brain Injury in Case Recalling Cuba Sound 'Attack'</a>
+                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.bloomberg.com/news/articles/2018-05-23/u-s-says-china-employee-hit-with-sound-sensations-brain-injury">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=booleanbetrayal">booleanbetrayal</a></strong> &nbsp;•&nbsp;
-                                    2018-05-23 14:40:17 &nbsp;•&nbsp;
-                                    147 comments &nbsp;•&nbsp;
-                                    225.0 points
+                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
+                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
+                                    27 comments &nbsp;•&nbsp;
+                                    224.0 points
                                 </span>
                             </td>
                         </tr>
@@ -526,15 +526,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17177955">Tcpdump Examples</a>
+                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://hackertarget.com/tcpdump-examples">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=thewanderer1999">thewanderer1999</a></strong> &nbsp;•&nbsp;
-                                    2018-05-29 10:49:10 &nbsp;•&nbsp;
-                                    27 comments &nbsp;•&nbsp;
-                                    221.0 points
+                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
+                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
+                                    26 comments &nbsp;•&nbsp;
+                                    220.0 points
                                 </span>
                             </td>
                         </tr>
@@ -546,15 +546,15 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://news.ycombinator.com/item?id=17143452">Zuckerberg set up fraudulent scheme to 'weaponise' data, court case alleges</a>
+                                    <a href="https://news.ycombinator.com/item?id=17166631">Analog Devices AD9361 – when microchips are more profitable than drugs</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://www.theguardian.com/technology/2018/may/24/mark-zuckerberg-set-up-fraudulent-scheme-weaponise-data-facebook-court-case-alleges?CMP=share_btn_tw">Article</a> &nbsp;•&nbsp;
-                                    <strong><a href="https://news.ycombinator.com/user?id=Malarkey73">Malarkey73</a></strong> &nbsp;•&nbsp;
-                                    2018-05-24 12:54:13 &nbsp;•&nbsp;
-                                    26 comments &nbsp;•&nbsp;
-                                    220.0 points
+                                    <a class="node" href="https://zeptobars.com/en/read/AD9361-SDR-Analog-Devices-DAC-ADC-65nm">Article</a> &nbsp;•&nbsp;
+                                    <strong><a href="https://news.ycombinator.com/user?id=erric">erric</a></strong> &nbsp;•&nbsp;
+                                    2018-05-27 12:26:48 &nbsp;•&nbsp;
+                                    60 comments &nbsp;•&nbsp;
+                                    219.0 points
                                 </span>
                             </td>
                         </tr>
@@ -602,7 +602,7 @@
         </div>
         <div class="inner fr">
             <div class="sep10"></div>
-            <strong>Last update at 2018-05-30 14:40:04.173279</strong>
+            <strong>Last update at 2018-05-30 14:50:03.327014</strong>
         </div>
     </div>
 </div>
